(Update): fixes hero section content on home page from displaying a broken layout

--- a/src/public/styles/main.css
+++ b/src/public/styles/main.css
@@ -921,6 +921,11 @@
       display: flex;
     }
   }
+  .lg\:h-\[37rem\] {
+    @media (width >= 64rem) {
+      height: 37rem;
+    }
+  }
   .lg\:h-\[80vh\] {
     @media (width >= 64rem) {
       height: 80vh;
